--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,31 @@ node_modules
 
 # Ignore output
 dist
-*.css
+dist-ssr
+*.local
+# Don't ignore CSS in production build
+# *.css
 
 #Ignore images
 *.png
 *.jpg
 
-# Ignore gack
+# Logs
+logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
